# KN1DPy

./: .git-blame-ignore-revs  .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: lint.yml  tests.yml
KN1DPy/: create_shifted_maxwellian.py  interp_fvrvxx.py  kinetic_h.py  kinetic_h2.py  kinetic_mesh.py  kn1d.py  kn1d_lite.py  main.py  make_dvr_dvx.py  utils.py
KN1DPy/common/: Kinetic_H.py  Kinetic_H2.py  constants.py
KN1DPy/rates/adas/: adas_ionisation.py
KN1DPy/rates/collrad/: collrad_sigmav_ion_h0.py
KN1DPy/rates/janev/: sigma_cx_h0.py  sigma_cx_hh.py  sigma_el_h_h.py  sigma_el_h_hh.py  sigma_el_hh_hh.py  sigma_el_p_h.py  sigma_el_p_hh.py  sigmav_cx_h0.py  sigmav_cx_hh.py  sigmav_h1s_h1s_hh.py  sigmav_h1s_h2s_hh.py  sigmav_h1s_hn3_hh.py  sigmav_h1s_hn_hp.py  sigmav_h2p_h2s_hh.py  sigmav_ion_h0.py  sigmav_ion_hh.py  sigmav_p_h1s_hh.py  sigmav_p_h1s_hp.py  sigmav_p_hn2_hp.py  sigmav_p_p_hp.py  sigmav_rec_h1s.py
KN1DPy/rates/johnson_hinnov/: johnson_hinnov.py
docs/: api.rst  conf.py  index.rst
tests/: test_dict_config.py
