[build-system]
requires = ["setuptools>=80.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "KN1DPy"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
  "numpy>=2.1",
  "scipy>=1.14",
  "matplotlib>=3.5",
  "tomli-w>=1.0",
]

[project.scripts]
kn1d = "KN1DPy.main:run"
kn1d_lite = "KN1DPy.main:run_lite"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "win-64"]

[tool.pixi.environments]
tests = { features = ["tests"], solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.dependencies]
python = ">=3.12"
numpy = ">=2.1"
scipy = ">=1.14"
matplotlib = ">=3.5"
tomli-w = ">=1.0"

[tool.pixi.pypi-dependencies]
KN1DPy = { path = ".", editable = true }

[tool.pixi.feature.tests.dependencies]
pytest = ">=8.4.1"

[tool.pixi.feature.tests.pypi-dependencies]
snaptol = ">=0.0.5"

[tool.pixi.feature.dev.pypi-dependencies]
ruff = ">=0.15.14"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff.lint]
select = [
  "F", # Pyflakes
  "E", # pycodestyle error
  "W", # pycodestyle warning
  "I", # isort
  "PT", # flake8-pytest-style
  "B", # flake8-bugbear
  "A", # flake8-builtins
  "C4", # flake8-comprehensions
  "T10", # flake8-debugger
  "PTH", # flake8-use-pathlib
  "SIM", # flake8-simplify
  "TCH", # flake8-type-checking
  "UP", # pyupgrade
  "FURB", # refurb
  "PERF", # perflint
  "RUF", # ruff specific
  "NPY", # NumPy specific
]
ignore = [
  "E501", # Line too long
]
